# perception_models

./: .gitignore  CLAUDE.md  DUAL_ENVIRONMENT_SETUP.md  DUAL_ENVIRONMENT_STATUS.md  MANIFEST.in  PYTORCH_2_4_VS_2_2_ANALYSIS.md  PYTORCH_2_8_EXECUTORCH_0_7_ANALYSIS.md  README.md  mobile_environment.yml  mobile_pyproject.toml  pyproject.toml  requirements.txt  setup.py  setup_mobile_env.sh  setup_mobile_simple.sh  test_pe_spatial_mobile.py
.claude/: settings.local.json
.github/: MANUAL_RELEASE_GUIDE.md  WORKFLOW_PITFALLS_ANALYSIS.md  WORKFLOW_VALIDATION_REPORT.md
.github/workflows/: release-s16-models.yml
apps/detection/: README.md
apps/detection/DETA_pe/: README.md  engine.py  engine_tta.py  main.py
apps/detection/DETA_pe/datasets/: coco.py
apps/detection/DETA_pe/models/: deformable_detr.py  utils_softnms.py
apps/detection/DETA_pe/scripts/: eval.sh  eval_tta_slurm.sh  finetune_spatial_Gwin384_o365ep12_1728pix_ep12_8node.sh  pretrain_spatial_Gwin384_o365ep12_1024pix_16node.sh
apps/ios/docs/: MOBILE_DEPLOYMENT.md  MOBILE_DEPLOYMENT_PLAN.md  MOBILE_DEPLOYMENT_RECOMMENDATIONS.md  README.md  S16_MODEL_SELECTION_RATIONALE.md  best-practices.md  classification.md  model-management.md
apps/ios/docs/examples/: KNNClassifier.swift  PECoreClassifier.swift  PECoreEmbeddingExtractor.swift  SimpleUsageExample.swift
apps/pe/: README.md
apps/pe/clip_benchmark/: cli.py  model_collection.py
apps/pe/clip_benchmark/metrics/: zeroshot_classification.py  zeroshot_retrieval.py
apps/pe/clip_benchmark/models/: __init__.py  huggingface_clip.py  open_clip.py
apps/pe/docs/: demo.ipynb  evaluation.md  pe_demo.ipynb
apps/plm/: README.md  generate.py  transformer.py
apps/plm/configs/finetune/: plm_1b.yaml  plm_3b.yaml  plm_8b.yaml
apps/plm/configs/sft/: plm_1b.yaml  plm_3b.yaml  plm_8b.yaml
apps/plm/configs/stage_1/: plm_1b.yaml  plm_3b.yaml  plm_8b.yaml
apps/plm/configs/stage_2/: plm_1b.yaml  plm_3b.yaml  plm_8b.yaml
apps/plm/configs/stage_3/: plm_1b.yaml  plm_3b.yaml  plm_8b.yaml
apps/plm/configs/warmup/: plm_1b.yaml  plm_3b.yaml  plm_8b.yaml
apps/plm/docs/: evaluation.md  finetune_example.md  plm_videobench.md  training.md
apps/plm/notebook_demos/: multi_image_understanding.ipynb
core/data/: conversation.py
core/vision_encoder/: config.py  factory.py  model.py  pev1.py  pos_embed.py  tokenizer.py  transform.py
core/vision_encoder/model_configs/: PEv1-B16-224.json  PEv1-G14-448.json  PEv1-L14-336.json
mobile_deployment/: hello.py  pyproject.toml
notebooks/: coreml_eval_results.json  coreml_evaluation_pe_core_t16_384.json  pe_core_coreml_eval_plus.ipynb
notebooks/baselines/: pe_core_t16_384_pytorch_2.4.1_baseline.json  pe_core_t16_384_pytorch_2.8.0_baseline.json
perception_models/: __init__.py
perception_models/tools/: __init__.py  convert.py  convert_executorch.py  onnx_to_executorch.py  test_mobile_inference.py
scripts/: benchmark_s16_models.py  convert_coreml_torchscript.py  convert_s16_models.py  create_release_manifest.py  test_converted_models.py  validate_workflow.py
